--- a/ReactBLEDemo/package.json
+++ b/ReactBLEDemo/package.json
@@ -9,13 +9,15 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
-    "react-native-create-bridge": "^2.0.1"
+    "react-native-create-bridge": "^2.0.1",
+    "react-redux": "^5.0.7"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
+    "redux": "^3.7.2"
   },
   "jest": {
     "preset": "react-native"
